fix(bookDTO): change the stream's toList function on the constructor for a better perfomance